# Debug-pt

./: Cargo.toml  Plan.md  Plan2.md  README.md
examples/: sample_trace.jsonl
src/: analyzer.rs  bundle.rs  main.rs  report.rs  reversing_machine.py  schema.rs
tests/: bundle_smoke.rs
tests/fixtures/bundle/: meta.json
tests/fixtures/bundle/modules/: module_map.json
tests/fixtures/bundle/trace/: trace_events.jsonl
