[package]
name = "fastfunc-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "fastfunc"
path = "src/main.rs"
